<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_height="match_parent"
    android:layout_width="wrap_content">
    <item
        android:id="@+id/buscador"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/op_buscador"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/app_bar_switch"
        android:title="Switch"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/op_perfil"
        android:title="@string/op_perfil" />
    <item
        android:id="@+id/opCerrarSesion"
        android:title="@string/op_sesion" />
</menu>